examples/bad/ERROR_AMBIGUOUS_SUM_TYPE/simple_inl.st
language core;

extend with #sum-types;

fn main(n : Nat) -> Nat + Nat {
  return (fn (a : Nat) { return inl(0) }) (0)
}

//ERROR_AMBIGUOUS_SUM_TYPE
